--- a/templates/singlemanager.html
+++ b/templates/singlemanager.html
@@ -3,5 +3,14 @@
 {% block extrahead %}
 {% endblock %}
 {% block extracontent %}
-	
+	{% if user.employee.username == employee.username %}
+		<div id="queue" class="container box">
+			<h4>Privaleges</h4>
+			<ol class="center">
+				<!--{#% for project in projects %}
+					<li><a href="/projects/{{ project.slug }}">{{ project }}</a></li>
+				{#% endfor %}-->
+			</ol>
+		</div>
+	{% endif %}
 {% endblock %}
