--- a/templates/projectsall.html
+++ b/templates/projectsall.html
@@ -11,6 +11,9 @@
          <li><a href="/projects/{{ project.slug }}">{{ project }}</a></li>
       {% endfor %}
      	</ol>
+     	<ol id="search-results">
+     	
+     	</ol>
    </div>
    <aside id="project-search" class="container box">
    	<form action="" method="post">
