--- a/templates/register.html
+++ b/templates/register.html
@@ -32,8 +32,8 @@
 		<br />
 		<p>
 			Terms of Agreement
-			<a href="#" onclick="show_terms()">(alert)</a>
-			<a href="#" onclick="ShowTermsPopUp()">(new window)</a>
+			<a href="#" onclick="showTermsAlert()">(alert)</a>
+			<a href="#" onclick="showTermsPopUp()">(new window)</a>
 		</p>
 		<br />
 		<p><!--{{ form.agree }}--> Clicking the Submit button means you agree to the above terms.</p>
