--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,20 +5,40 @@
 	text-align: left;
 	outline: none;
 	-webkit-box-flex: 0;
+	-moz-box-flex: 0;
 	-webkit-box-orient: vertical;
+	-moz-box-orient: vertical;
+	position: relative;
+	opacity: 1;
 }
 body{
-	background-image: url(/static/img/diamondPlateBG.jpg);
+	background-color: #333;
+	/*background-image: url(/static/img/animated_lightning1.gif);
 	background-position: center top;
 	background-repeat: no-repeat;
-	background-size: 1600px 1200px;
+	background-size: 1400px 1000px;*/
 	text-align: center;
 	color: #000;
 	display: box;
 	display: -webkit-box;
 	display: -moz-box;
 	-webkit-box-pack: start;
+	-moz-box-pack: start;
 }
+/*#background1{
+	background-image: url(/static/img/animated-lightning2.gif);
+	background-position: center top;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+}
+#background2{
+	background-image: url(/static/img/animated-lightning3.gif);
+	background-position: center top;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+}*/
 header, footer, section, nav, aside, hgroup{
 	
 }
@@ -28,6 +48,7 @@ img{
 container{
 	max-width: 1000px;
 	-webkit-box-orient: vertical;
+	-moz-box-orient: vertical;
 }
 container *{
 }
@@ -76,7 +97,7 @@ footer{
 }
 aside{
 	width: 300px;
-	margin-left: 6px;
+	margin-left: 16px;
 }
 #nav-logo li{
 	
@@ -126,6 +147,7 @@ aside{
 }
 #singleemployee{
 	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
 }
 #queue{
 	
@@ -143,6 +165,7 @@ aside{
 #singleprojectinfo{
 	margin: 3px 3px 3px 0;
 	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
 }
 #register_div{
 	border: 1px solid #000;
@@ -193,6 +216,7 @@ aside{
 }
 .modelview{
 	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
 	margin: 3px;
 }
 .thumb{
@@ -204,11 +228,16 @@ aside{
 	display: box;
 	display: -moz-box;
 }
+.inline{
+	display: inline-block;
+}
 .horizontal{
 	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
 }
 .vertical{
 	-webkit-box-orient: vertical;
+	-moz-box-orient: vertical;
 }
 .fill{
 	-webkit-box-flex: 1;
@@ -287,6 +316,7 @@ aside{
 	border-radius: 6px;
 	margin-top: 6px;
 	padding: 20px 10px 20px 10px;
+	opacity: .8;
 }
 .form-error{
 	color: red;
