--- a/static/css/main.css
+++ b/static/css/main.css
@@ -333,6 +333,7 @@ aside{
 	margin-top: 6px;
 	padding: 20px 10px 20px 10px;
 	opacity: .8;
+	opacity: 1;
 }
 .form-error{
 	color: red;
@@ -346,6 +347,7 @@ aside{
 	position: absolute;
 	margin-left: 30px;
 	box-shadow: 2px 2px 3px #888888;
+	z-index: 100;
 }
 .flash{
 	
